--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 3,
-	"name": "Kosik.cz ceny",
+	"name": "Rohlik.cz ceny",
 	"version": "1.0.1",
 
-	"description": "Allows to track current prices of products on Kosik.cz",
+	"description": "Allows to track current prices of products on Rohlik.cz",
 	"action": {
 		"default_popup": "popup.html"
 	},
