--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,9 @@
 	"action": {
 		"default_popup": "popup.html"
 	},
+	"permissions": [
+		"storage"
+	],
 	"host_permissions": ["https://developer.chrome.com/*"]
+
 }
