--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 	"action": {
 		"default_popup": "popup.html"
 	},
-	"permissions": ["activeTab"],
+	"permissions": ["storage", "activeTab"],
 	"host_permissions": ["https://developer.chrome.com/*"],
 	"content_scripts": [
 		{
